Version 0.1.0-1
------------------------------------------------------------------------------
New functions:
* Added functions `weight` and `weight2` to weight vectors.
* Added functions `wtd_sd` and `wtd_se` to compute weighted standard deviations and standard errors.

Version 0.1.0
------------------------------------------------------------------------------
General:
* Initial release on CRAN.