@@ -17,6 +17,7 @@ export(hoslem_gof)
 export(icc)
 export(levene_test)
 export(mean_n)
+export(merMod_p)
 export(mic)
 export(mwu)
 export(odds_to_rr)
@@ -69,6 +70,7 @@ importFrom(stats,pf)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,predict.glm)
+importFrom(stats,pt)
 importFrom(stats,quantile)
 importFrom(stats,resid)
 importFrom(stats,residuals)
