@@ -4,3 +4,4 @@
 
 * Added functions `weight` and `weight2` to weight vectors.
 * Added functions `wtd_sd` and `wtd_se` to compute weighted standard deviations and standard errors.
+* Added function `merMod_p` to compute p-values for merMod-objects.
